[package]
name = "boon-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
boon = { package = "boon-deadlock", version = "0.5.0" }
boon-proto = "0.2.10735643+6580"
prost = "0.14"

[profile.release]
opt-level = 3        # optimize for speed — the parser hot path matters; the
                     # whole module is only ~tens of KB compressed, so size isn't
                     # worth trading away parse throughput
lto = true
codegen-units = 1
panic = "abort"      # drop panic-unwinding tables (wasm aborts anyway)
strip = true         # strip symbol names (no runtime cost)

# Run wasm-opt for speed. The --enable-* flags match the wasm features modern
# rustc emits by default; without them the bundled wasm-opt rejects the module.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    '-O3',
    '--enable-bulk-memory',
    '--enable-sign-ext',
    '--enable-nontrapping-float-to-int',
    '--enable-mutable-globals',
]
